<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/home_star"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/shoppe_food_logo_png"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login_title_name"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:id="@+id/username_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/text_login_input_name"
                app:endIconMode="clear_text"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit_text_lg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_login_input_password"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/text_login_input_password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text_lg"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/third_color"
            android:textSize="18sp"
            android:text="@string/text_login_btn_star"
            app:cornerRadius="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_password_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/primary_color"
                android:text="@string/text_login_btn_not_pass"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barrita"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_user"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/text_login_btn_register"
                android:textColor="@color/third_color" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>