<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/additional_color_tree"
    tools:context=".RegisterActivity"
    >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/return_home"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_outline_arrow_back_ios_24"
            app:iconSize="40dp" />
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="30dp"
                android:textStyle="bold"
                android:textColor="@color/third_color"
                android:text="@string/text_register_title"
                android:textSize="22sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_assignment_ind_24"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="22dp"
                android:background="@drawable/round_home"
                android:orientation="vertical"
                >

                <!-- name Register -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/text_register_insert_name"/>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Design.TextInputLayout"
                        android:id="@+id/register_name_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/text_register_input_name"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <!-- last name Register -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/text_register_insert_lasname"/>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Design.TextInputLayout"
                        android:id="@+id/register_lastname_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/text_register_input_lasname"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_lastname_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <!-- Email -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/text_register_insert_email"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Design.TextInputLayout"
                        android:id="@+id/register_email_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/text_register_input_email"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <!-- Password -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/text_register_insert_pass"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Design.TextInputLayout"
                        android:id="@+id/register_password_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:endIconMode="password_toggle"
                        android:hint="@string/text_register_insert_pass"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/btn_register_start"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/true_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/btn_yes_user"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</ScrollView>