<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/additional_color_tree"
    tools:context=".ActivityResetPass">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/return_home_xd"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_outline_arrow_back_ios_24"
            app:iconSize="40dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80pt"
            android:layout_marginTop="20dp"
            android:src="@drawable/emoticon_facial_expression"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@drawable/round_home">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_reset_title"
                android:textSize="22sp"
                android:layout_gravity="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_reset_descrip"
                android:textSize="22sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout"
                    android:id="@+id/username_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/text_reset_input"
                    app:endIconMode="clear_text"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_enviar_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btn_reset"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>